@@ -1,6 +1,7 @@
 Revision history for Music-Intervals
 
 {{$NEXT}}
+    - Add logic to handle the 2/1 octave ratio correctly.
 
 0.0505 2019-03-15 11:10:17
     - Dropped the NAME section from the eg/Dancer-App.pm example.
